--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   },
