--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=1337
-DATABASE_URL=mongo://localhose/travel-log
+DATABASE_URL=mongodb://localhost/travel-log
 CORS_ORIGIN=http://localhost:3000
